fix(VBtn/Tab): normalize vertical alignment
had different results on different browsers

fixes #7832

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -106,6 +106,7 @@
   // https://github.com/vuetifyjs/vuetify/issues/7580
   flex: 1 0 auto
   justify-content: center
+  line-height: normal
   // Fixes bug where IE11 moves
   // button content when clicked
   // https://stackoverflow.com/questions/10305658/prevent-button-from-shifting-during-click-in-ie
