--- a/packages/vuetify/src/components/VIcon/VIcon.sass
+++ b/packages/vuetify/src/components/VIcon/VIcon.sass
@@ -17,7 +17,7 @@
   justify-content: center
   line-height: 1
   transition: $primary-transition
-  vertical-align: text-bottom
+  vertical-align: middle
 
   &--right
     margin-left: map-get($grid-gutters, 'md')
